@@ -130,6 +130,9 @@ Release 0.8.0 - unreleased
 
   IMPROVEMENTS
 
+    TAJO-553: Add a method to the TajoClient to get finished query lists. 
+    (Ilhyun Suh via jihoon)
+
     TAJO-670: Change daemon's hostname to canonical hostname 
     (hyoungjunkim via hyunsik)
 
